# agent-orchestrator

./: .gitignore  .sops.yaml  CLAUDE.md  demo.py  demo_credentials.py  demo_sandbox.py  justfile  main.py  pyproject.toml
.github/workflows/: idd-validate.yml
.pm/: agent-rules.md  credentials.yaml  secrets.env
evals/: __init__.py  __main__.py  run.py  runner.py  task.py
plan/: roadmap.yaml
scripts/: validate-idd.sh
specs/capabilities/: agent-orchestration.capability.yaml
specs/journeys/: agent-execution-lifecycle.md  feature-request-lifecycle.md  watchdog-escalation.md
specs/models/: README.md
specs/personas/: coding-agent.md  devops-agent.md  pr-agent.md  primary-agent.md  stakeholder.md  uat-agent.md
src/agents/: __init__.py  agent_cli.py  base.py  coding_agent.py  git_workspace.py  runner.py  stub_agent.py
src/contracts/: __init__.py  capability_profile.py  coding_bundle.py  credentials.py  devops_bundle.py  pr_bundle.py  status_reporter.py  task_bundle.py  uat_bundle.py
src/orchestrator/: __init__.py  callback_handler.py  callback_server.py  dispatcher.py  graph.py  server.py  state.py  webhook_receiver.py
src/plan/: __init__.py  manager.py  schema.py
tests/: conftest.py
tests/agents/: test_agent_cli.py  test_coding_agent.py  test_git_workspace.py  test_stub_agent.py
tests/contracts/: test_capability_profile.py  test_credentials.py  test_task_bundle.py
tests/evals/: test_eval_framework.py
tests/integration/: test_credential_passthrough.py
tests/orchestrator/: test_callback_server.py  test_dispatcher.py  (+2 more)
tools/: validate-plan.py
(+63 files in other folders)
